force-app/main/default/objects/RegoSettings__c/RegoSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This needs to be set for use by the External Rego.</description>
    <label>Rego Settings</label>
</CustomObject>