force-app/main/default/objects/RegoSettings__c/fields/sfdcHostAccountSetup__c.field-meta.xml
<CustomField>
    <fullName>sfdcHostAccountSetup__c</fullName>
    <label>Host Account setup Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>