force-app/main/default/objects/RegoSettings__c/fields/sfdcHostFallbackName__c.field-meta.xml
<CustomField>
    <fullName>sfdcHostFallbackName__c</fullName>
    <label>SF Host Fallback Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>