force-app/main/default/objects/RegoSettings__c/fields/sfdcHostName__c.field-meta.xml
<CustomField>
    <fullName>sfdcHostName__c</fullName>
    <label>SF Host Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>